test/typecheck/errors/re-decl-var.boa
f: function();

f := function() {
	v := 1;
};
